Improved toggle change Exhange rate icon

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -37,7 +37,7 @@
                     <h2>
                         Wechselkurs: {{ exchangeRate }}
                         <i v-on:click="toggleEchangeExchangeRate" style="font-size: 1.25rem;"
-                            class="material-icons">edit</i>
+                            class="material-icons icon-button">edit</i>
                     </h2>
                     <div v-if="showChangeExchangeRate">
 
