--- a/calculator/index.html
+++ b/calculator/index.html
@@ -59,7 +59,10 @@
         </form>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- DEV -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
+    <!-- PROD -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <script src="index.js"></script>
 </body>
 
